[package]
name = "zrest"
version = "0.2.0"
authors = ["Valery Vybornov <vvybornov@gmail.com>"]

[dependencies]
log = "0.4"
futures = "0.1"
hyper = "0.12"
http = "0.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
mime = "0.3"
hyper-tls = "0.3"
native-tls = "0.2"
tokio-tls = "0.2"
tokio-tcp = "0.1"
base64 = "0.9"

[dev-dependencies]
tokio = "0.1"
env_logger = "0.5"